--- a/README.Rmd
+++ b/README.Rmd
@@ -77,11 +77,10 @@ end.time = 2
 n <- 400
 
 # simulate data
-data <- GenerateData(n = n, end.time = end.time,
-                     abar = NULL, abar.prime = NULL)
+data <- GenerateData(n = n, end.time = end.time)
 ```
 
-Next, we'll need to generate simple models for conditional densities and
+Next, can generate simple models for conditional densities and
 iterative expectations, and define counterfactual exposures:
 
 ```{r models-counterfacts}
@@ -97,8 +96,8 @@ Having gone through the above steps, we can now obtain IPTW and TMLE estimates
 of the _natural mediation effect_:
 
 ```{r estimate}
-# let's fit the L-TMLE for the mediation parameter
-result.c <- suppressMessages(
+# let's fit the longitudinal TMLE for the mediation parameter
+result_10 <- suppressMessages(
               medltmle(data = data,
                        Anodes = names(data)[grep("^A", names(data))],
                        Cnodes = names(data)[grep("^C", names(data))],
@@ -113,13 +112,13 @@ result.c <- suppressMessages(
                        qLform = spec$qL.c,
                        abar = rep(abar, end.time),
                        abar.prime = rep(abar.prime, end.time),
-                       estimand = "NE",
+                       CSE = TRUE,
                        time.end = end.time
                       )
               )
 
 # let's examine the estimates
-result.c$estimates
+result_10$estimates
 ```
 
 ---
