--- a/vignettes/medltmle_vignette.Rmd
+++ b/vignettes/medltmle_vignette.Rmd
@@ -34,7 +34,7 @@ Efficient influence curve under a locally saturated semiparametric model and rob
 
 We'll start by examining a simple simulated data set. In this case, we will generate data for $n=400$ samples and $2$ time points of the form: $$O=(W1,W2,C1,A1,LA1,Z1,LZ1,Y1,C2,A2,LA2,Z2,LZ2,Y2)$$ Note that $W$ variables are baseline covariates, $C$ is a censoring mechanism, $A$ is a time-varying exposure, $LA$ and $LZ$ are time-varying covariates, $Z$ is a time-varying mediator, and finally $Y$ is a survival outcome. This data structure allows for confounders of the exposure-outcome relation and exposure-induced confounders of the mediator-outcome relation, both within time and across time. The `medltmle` package additionally allows the user to define nodes $D$ for non-survival outcome and when treating death as a censoring variable, but we do not recomend it. In addition, `medltmle` also allows for time-dependency in the baseline covariates (see example below). 
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, eval=FALSE}
 options(warn=-1)
 suppressMessages(library(SuperLearner))
 suppressMessages(library(matrixStats))
@@ -45,7 +45,7 @@ suppressMessages(library(pracma))
 suppressMessages(library(reshape))
 ```
 
-```{r load_data}
+```{r, eval=FALSE}
 suppressMessages(library(medltmle))
 
 set.seed(2)
@@ -56,13 +56,13 @@ data<-GenerateData(n=400, end.time=2)
 
 Since this is a simulated data set, we know the data-generating distribution. With function `make.sim.spec` we just let `medltmle` know what the correct set of covariates is. Note however, that this function is specific to the simulated data set, and is therefore not for general use. The `medltmle` allows you to specify a list of covariates you want to use for each part of the likelihood. If set to `NULL`, you can specify if you want to condition on the entire past, or impose Markov assumptions of a certain order (default is one time step in the past).  
 
-```{r}
+```{r, eval=FALSE}
 spec<-make.sim.spec(2)
 ```
 
 With correct models specified for each, we run `medltmle` for the non-data dependent parameter with exposure set to $(1,0)$, $(0,0)$, and $(1,1)$. In this particular setting, we are estimating our parameter using general linear models. 
 
-```{r}
+```{r, eval=FALSE}
 result_10 <- suppressMessages(medltmle(data=data,
                            Anodes=names(data)[grep('^A',names(data))],
                            Cnodes=names(data)[grep('^C',names(data))],
@@ -124,7 +124,7 @@ result_11 <- suppressMessages(medltmle(data=data,
 Note that Natural Direct Effect} is defined as: $$E[Y_{2}(1,\overline{\Gamma^0})] - E[Y_{2}(0,\overline{\Gamma^0})]$$ whereas the Natural Indirect Effect is defined as: $$E[Y_{2}(1, \overline{\Gamma^1})] - E[Y_{2}(1,\overline{\Gamma^0})]$$ finally, overall effect is just: $$E[Y_{2}(1)] - E[Y_{2}(0)] = E[Y_{2}(1, \overline{\Gamma^1})] - E[Y_{2}(0,\overline{\Gamma^0})]$$ We can summarize the results using `summary_medltmle` function. 
 
 
-```{r}
+```{r, eval=FALSE}
 res<-summary_medltmle(nie1=result_11,nie2=result_10,nde1=result_10,nde2=result_00)
 
 res$NDE
