--- a/README.Rmd
+++ b/README.Rmd
@@ -22,6 +22,10 @@ knitr::opts_chunk$set(
 [![Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](http://www.repostatus.org/badges/latest/wip.svg)](http://www.repostatus.org/#wip)
 [![MIT license](http://img.shields.io/badge/license-MIT-brightgreen.svg)](http://opensource.org/licenses/MIT)
 
+> Estimation for Natural Mediation Effect in Longitudinal Data
+
+**Authors:** [Ivana Malenica](https://github.com/podTockom) and Wenjing Zheng
+
 ## Description
 
 `medltmle` estimates the natural mediation effect for a longitudinal setting
@@ -124,14 +128,14 @@ result_10$estimates
 ---
 
 ## License
-&copy; 2017 Ivana Malenica and Wenjing Zheng
+&copy; 2017 Ivana Malenica
 
 The contents of this repository are distributed under the MIT license. See
 below for details:
 ```
 The MIT License (MIT)
 
-Copyright (c) 2017 Ivana Malenica and Wenjing Zheng
+Copyright (c) 2017 Ivana Malenica
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
